# zooniverse-lsst

./: README.md  demo.ipynb  pyproject.toml
.github/workflows/: python-publish.yml
src/lsst_zooniverse/: client.py  generator.py
src/zooniverse_lsst/: generator.py  lists.py
