[project]
name = "lsst-subject-creator"
version = "0.1.0"
description = ""
authors = [
    {name = "Adam McMaster",email = "me@adam-mcmaster.com"}
]
license = {text = "BSD"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "panoptes-client (>=1.7.1,<2.0.0)",
    "lasair (>=0.1.2,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

